crates/lex/tests/ui/missing_fields_tuple_struct.stderr
error: no tuple fields supplied, at least one required
 --> tests/ui/missing_fields_tuple_struct.rs
  |
  | struct Foo();
  |           ^^
