crates/lex/tests/ui/missing_fields_tuple_struct.rs
#[derive(pluine_lex_macros::Spanned)]
struct Foo();

fn main() {}
